--- a/Clear Choice/MainWindow.xaml
+++ b/Clear Choice/MainWindow.xaml
@@ -2,10 +2,7 @@
         xmlns:my="clr-namespace:Stemstudios.UIControls;assembly=UIControls"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Clear Choice Business Suite" Height="800" Width="1024" AllowsTransparency="False" WindowStyle="None" Icon="/Resources/logo2.ico" Closing="Window_Closing">
-    <Window.Background>
-        <ImageBrush ImageSource="/Resources/Background.png" Stretch="UniformToFill"/>
-    </Window.Background>
+        Title="Clear Choice Business Suite" Height="800" Width="1024" AllowsTransparency="true" WindowStyle="None" ResizeMode="CanResizeWithGrip" Icon="/Resources/logo2.ico" Closing="Window_Closing" Background="#00000000" SizeChanged="Window_SizeChanged">
     <Window.Resources>
         <ResourceDictionary>
             <Image x:Key="HomeIcon" Source="/Resources/Icons/Home.png" />
@@ -19,6 +16,17 @@
             </Storyboard>
         </ResourceDictionary>
     </Window.Resources>
+    <Border BorderThickness="3" CornerRadius="5">
+        <Border.Background>
+            <ImageBrush ImageSource="/Resources/Background.png" Stretch="UniformToFill"/>
+        </Border.Background>
+        <Border.BorderBrush>
+            <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
+                <GradientStop Color="#99FFFFFF" Offset="0.0"/>
+                <GradientStop Color="#22fff0c1" Offset="0.5"/>
+                <GradientStop Color="#99FFFFFF" Offset="1.0"/>
+            </LinearGradientBrush>
+        </Border.BorderBrush>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="36"></RowDefinition>
@@ -87,4 +95,5 @@
             </Grid>
         </Grid>
     </Grid>
+    </Border>
 </Window>
