--- a/Clear Choice/Views/LotExtrasBilledReport.xaml
+++ b/Clear Choice/Views/LotExtrasBilledReport.xaml
@@ -24,15 +24,22 @@
         <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto"/>
-                <ColumnDefinition Width="150"/>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition/>
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
                 <RowDefinition/>
             </Grid.RowDefinitions>
-            <TextBlock Grid.Column="0" Grid.Row="0" HorizontalAlignment="Left" Margin="20,5,5,5" VerticalAlignment="Top" Text="Lot Extras Billed:" FontSize="20" FontStretch="Normal" Foreground="White"/>
-            <DataGrid Name="dgExtrabill" Grid.Row="1" Grid.ColumnSpan="3"
+            <TextBlock Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="5" HorizontalAlignment="Left" Margin="20,5,5,5" VerticalAlignment="Top" Text="Lot Extras Billed:" FontSize="20" FontStretch="Normal" Foreground="White"/>
+            <TextBlock Grid.Column="0" Grid.Row="1" Margin="20,5,5,5" VerticalAlignment="Center" HorizontalAlignment="Right" Text="From:" FontSize="14" FontStretch="Normal" Foreground="White"/>
+            <UIControls:SDatePicker Name="dpFrom" Grid.Column="1" Grid.Row="1" Margin="5" SelectedDateChanged="dpFrom_SelectedDateChanged" Width="100" />
+            <TextBlock Grid.Column="2" Grid.Row="1" Margin="20,5,5,5" VerticalAlignment="Center" HorizontalAlignment="Right" Text="To:" FontSize="14" FontStretch="Normal" Foreground="White"/>
+            <UIControls:SDatePicker Name="dpTo" Grid.Column="3" Grid.Row="1" Margin="5" SelectedDateChanged="dpFrom_SelectedDateChanged" Width="100" />
+            <DataGrid Name="dgExtrabill" Grid.Row="2" Grid.ColumnSpan="5"
                               Margin="5,16,5,5" 
                               CanUserAddRows="False" 
                               CanUserDeleteRows="False" 
